.genie/wishes/mechanical-rebrand/qa/group-b/bloop-rebrand-run.log
ðŸ”§ Automagik Forge BULLETPROOF Rebranding
==========================================
Processing ONLY upstream/ folder (read-only submodule)

ðŸ“ Processing upstream/ files...
  âœ“ Replaced 6 occurrences in upstream/README.md
  âœ“ Replaced 1 occurrences in upstream/npx-cli/package.json
  âœ“ Replaced 1 occurrences in upstream/crates/utils/src/assets.rs
  âœ“ Replaced 2 occurrences in upstream/crates/utils/src/lib.rs
  âœ“ Replaced 8 occurrences in upstream/docs/integrations/vscode-extension.mdx
  âœ“ Replaced 2 occurrences in upstream/docs/docs.json
  âœ“ Replaced 1 occurrences in upstream/CODE-OF-CONDUCT.md
  âœ“ Replaced 1 occurrences in upstream/frontend/vite.config.ts
  âœ“ Replaced 1 occurrences in upstream/frontend/src/components/layout/navbar.tsx
  âœ“ Replaced 1 occurrences in upstream/frontend/src/components/tasks/TaskDetails/preview/NoServerContent.tsx
  âœ“ Replaced 1 occurrences in upstream/frontend/src/components/tasks/TaskDetails/PreviewTab.tsx
  âœ“ Replaced 1 occurrences in upstream/CLAUDE.md
ðŸ“ Updating critical asset directory...

ðŸ” VERIFICATION PHASE
====================
ðŸ“Š Replacements made: 0
ðŸ“Š Files modified: 0
ðŸ“Š Remaining 'vibe-kanban' references in upstream/: 0
ðŸ“Š Remaining 'VK/vk' abbreviations in upstream/: 0
ðŸ“Š Remaining 'bloop' references in upstream/: 0

âœ… Build verification...
    Checking utils v0.0.105 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/upstream/crates/utils)
   Compiling server v0.0.105 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/upstream/crates/server)
    Checking executors v0.0.105 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/upstream/crates/executors)
    Checking db v0.0.105 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/upstream/crates/db)
    Checking services v0.0.105 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/upstream/crates/services)
    Checking deployment v0.0.105 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/upstream/crates/deployment)
    Checking forge-omni v0.4.0 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/forge-extensions/omni)
    Checking forge-config v0.4.0 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/forge-extensions/config)
    Checking local-deployment v0.0.105 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/upstream/crates/local-deployment)
    Checking forge-app v0.4.0 (/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/forge-app)
error: #[derive(RustEmbed)] folder '/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr/forge-app/../frontend/dist' does not exist. cwd: '/var/tmp/vibe-kanban/worktrees/aa54-group-b-bulletpr'
  --> forge-app/src/router.rs:37:1
   |
37 | / #[folder = "../frontend/dist"]
38 | | struct Frontend;
   | |________________^

error[E0599]: no function or associated item named `get` found for struct `Frontend` in the current scope
   --> forge-app/src/router.rs:373:21
    |
38  | struct Frontend;
    | --------------- function or associated item `get` not found for this struct
...
373 |     match Frontend::get("index.html") {
    |                     ^^^ function or associated item not found in `Frontend`
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `get`, perhaps you need to implement one of them:
            candidate #1: `Embed`
            candidate #2: `Row`
            candidate #3: `SliceIndex`
            candidate #4: `icu_properties::names::PropertyEnumToValueNameLookup`
            candidate #5: `icu_provider::baked::DataStore`
            candidate #6: `nix::sys::socket::GetSockOpt`
            candidate #7: `object::read::elf::relocation::Relr`
            candidate #8: `rustls::server::server_conn::StoresServerSessions`
            candidate #9: `toml_edit::table::TableLike`
            candidate #10: `zbus::object_server::interface::Interface`

error[E0277]: the trait bound `Frontend: Embed` is not satisfied
   --> forge-app/src/router.rs:380:25
    |
380 |     serve_static_file::<Frontend>(&path).await
    |                         ^^^^^^^^ the trait `Embed` is not implemented for `Frontend`
    |
    = help: the following other types implement trait `Embed`:
              Assets
              ScriptAssets
              SoundAssets
note: required by a bound in `serve_static_file`
   --> forge-app/src/router.rs:383:31
    |
383 | async fn serve_static_file<T: RustEmbed>(path: &str) -> Response {
    |                               ^^^^^^^^^ required by this bound in `serve_static_file`

error[E0277]: the trait bound `Frontend: Embed` is not satisfied
   --> forge-app/src/router.rs:380:5
    |
380 |     serve_static_file::<Frontend>(&path).await
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Embed` is not implemented for `Frontend`
    |
    = help: the following other types implement trait `Embed`:
              Assets
              ScriptAssets
              SoundAssets
note: required by a bound in `serve_static_file`
   --> forge-app/src/router.rs:383:31
    |
383 | async fn serve_static_file<T: RustEmbed>(path: &str) -> Response {
    |                               ^^^^^^^^^ required by this bound in `serve_static_file`

error[E0277]: the trait bound `Frontend: Embed` is not satisfied
   --> forge-app/src/router.rs:380:42
    |
380 |     serve_static_file::<Frontend>(&path).await
    |                                          ^^^^^ the trait `Embed` is not implemented for `Frontend`
    |
    = help: the following other types implement trait `Embed`:
              Assets
              ScriptAssets
              SoundAssets
note: required by a bound in `serve_static_file`
   --> forge-app/src/router.rs:383:31
    |
383 | async fn serve_static_file<T: RustEmbed>(path: &str) -> Response {
    |                               ^^^^^^^^^ required by this bound in `serve_static_file`

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `forge-app` (bin "forge-app") due to 5 previous errors
  âœ“ Cargo check passed

ðŸŽ‰ SUCCESS: ALL upstream/ references replaced!
Total replacements: 0 across 0 files

Next steps:
1. Review changes: git diff upstream/
2. Test application: cargo run -p forge-app
3. Commit: git add upstream/ && git commit -m 'chore: mechanical rebrand after upstream merge'
